objects/Case_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Vendor_Style_Number__c</fullName>
        <label>Vendor Style Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WRTA_Received_Credited_Date__c</fullName>
        <label>WRTA Received/Credited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Web_Item_Description__c</fullName>
        <label>Web Item Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Case Line Item</label>
    <listViews>
        <fullName>CSC_Vendors</fullName>
        <columns>Case_Number__c</columns>
        <columns>Order__c</columns>
        <columns>Case_Status__c</columns>
        <columns>Department__c</columns>
        <columns>Reason__c</columns>
        <columns>Reason_Notes__c</columns>
        <columns>CW_SKU_ID__c</columns>
        <columns>Web_Item_Description__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case_Line_Items__c.Product_Information</value>
        </filters>
        <filters>
            <field>Is_Locked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>External_Support__c</field>
            <operation>equals</operation>
            <value>CSC Vendor</value>
        </filters>
        <filters>
            <field>Case_Status__c</field>
            <operation>notEqual</operation>
            <value>New</value>
        </filters>
        <label>CSC Vendors</label>
        <sharedTo>
            <role>CSC_Backend_Leader</role>
            <role>CSC_Director</role>
            <role>CSC_Product_Specialist_Lead</role>
            <role>CSC_Product_Specialist_Supervisor</role>
            <role>RH_Ops</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Flatworld</fullName>
        <columns>Case_Number__c</columns>
        <columns>Order__c</columns>
        <columns>Department__c</columns>
        <columns>Reason__c</columns>
        <columns>Reason_Notes__c</columns>
        <columns>CW_SKU_ID__c</columns>
        <columns>Web_Item_Description__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case_Line_Items__c.Product_Information</value>
        </filters>
        <filters>
            <field>Is_Locked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>External_Support__c</field>
            <operation>equals</operation>
            <value>Flatworld</value>
        </filters>
        <filters>
            <field>Case_Status__c</field>
            <operation>notEqual</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>CW_SKU_ID__c</field>
            <operation>contains</operation>
            <value>68270644ASTL</value>
        </filters>
        <label>Flatworld</label>
        <sharedTo>
            <role>CSC_Backend_Leader</role>
            <role>CSC_Director</role>
            <role>CSC_Product_Specialist_Lead</role>
            <role>CSC_Product_Specialist_Supervisor</role>
            <role>RH_Ops</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Shanghai</fullName>
        <columns>Case_Number__c</columns>
        <columns>Order__c</columns>
        <columns>Department__c</columns>
        <columns>Reason__c</columns>
        <columns>Reason_Notes__c</columns>
        <columns>CW_SKU_ID__c</columns>
        <columns>Web_Item_Description__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Vendor_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case_Line_Items__c.Product_Information</value>
        </filters>
        <filters>
            <field>Is_Locked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>External_Support__c</field>
            <operation>equals</operation>
            <value>Shanghai</value>
        </filters>
        <filters>
            <field>Case_Status__c</field>
            <operation>notEqual</operation>
            <value>New</value>
        </filters>
        <label>Shanghai</label>
        <sharedTo>
            <role>CSC_Backend_Leader</role>
            <role>CSC_Director</role>
            <role>CSC_Product_Specialist_Lead</role>
            <role>CSC_Product_Specialist_Supervisor</role>
            <role>RH_Ops</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Case Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Line Items</pluralLabel>
    <recordTypes>
        <fullName>Accommodations</fullName>
        <active>true</active>
        <label>Accommodations</label>
    </recordTypes>
    <recordTypes>
        <fullName>BO_Date_Validation</fullName>
        <active>true</active>
        <label>BO Date Validation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract</fullName>
        <active>true</active>
        <label>Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>Delay_Notifications</fullName>
        <active>true</active>
        <label>Delay Notifications</label>
    </recordTypes>
    <recordTypes>
        <fullName>Delight_HQ</fullName>
        <active>true</active>
        <label>Delight HQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Delivering_on_Delight</fullName>
        <active>true</active>
        <label>Delivering on Delight</label>
    </recordTypes>
    <recordTypes>
        <fullName>Delivery_Return_Support</fullName>
        <active>true</active>
        <label>Delivery &amp; Return Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Information</fullName>
        <active>true</active>
        <label>Product Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Issue</fullName>
        <active>true</active>
        <label>Product Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reorders</fullName>
        <active>true</active>
        <label>Reorders</label>
    </recordTypes>
    <recordTypes>
        <fullName>Replacement_Parts</fullName>
        <active>true</active>
        <label>Replacement Parts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Returns</fullName>
        <active>true</active>
        <label>Returns</label>
    </recordTypes>
    <recordTypes>
        <fullName>SPO_Date_Validation</fullName>
        <active>true</active>
        <label>SPO Date Validation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AccommodationQtyLessThanOrderQty</fullName>
        <active>false</active>
        <description>Ensures that the Accommodation Quantity is less than the order quantity</description>
        <errorConditionFormula>Accommodation_Quantity__c &gt; Order_Quantity__c</errorConditionFormula>
        <errorDisplayField>Accommodation_Quantity__c</errorDisplayField>
        <errorMessage>The accommodation quantity must be less than the order quantity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AccommodationQtyRequiredUnlessFlat</fullName>
        <active>false</active>
        <description>Require an Accommodation Quantity unless there is a flat rate input.</description>
        <errorConditionFormula>AND(
RecordType.Name = &quot;Accommodations&quot;,
OR(
NOT(ISBLANK( Original_Line_Requested_Percentage__c )),
NOT(ISBLANK(Adjusted_Unit_Price__c))),
ISBLANK(Accommodation_Quantity__c),
(ISBLANK( Flat_Rate_Line_Accommodation_Amount__c))
)</errorConditionFormula>
        <errorDisplayField>Accommodation_Quantity__c</errorDisplayField>
        <errorMessage>You must input an Accommodation Quantity unless you have a Flat Rate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AccomomodationAmountGreaterThanTotal</fullName>
        <active>false</active>
        <description>If your accommodation amount is greater than the line total, and the accommodation amount greater than total check box is not check, throw an error.</description>
        <errorConditionFormula>AND(
RecordType.Name = &quot;Accommodations&quot;,
 Line_Item_Accommodation_Amount__c &gt;  Line_Total__c,
 Accommodation_Is_Greater_Than_Total__c = False)</errorConditionFormula>
        <errorDisplayField>Accommodation_Is_Greater_Than_Total__c</errorDisplayField>
        <errorMessage>If your Accommodation Amount is greater than the Line Total, you must check the Accommodation Is Greater Than Total checkbox to confirm.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BC_Monogramming_Script_and_Border</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
RecordType.DeveloperName=&quot;DC_Inquiries_Monogramming&quot;,
ISPICKVAL(Monogram_Type__c, &quot;Baby &amp; Child&quot;),
 OR(
ISBLANK(TEXT(B_C_Monogram_Border__c )),
ISBLANK( TEXT(B_C_Monogram_Script__c ))
)
)</errorConditionFormula>
        <errorDisplayField>Monogram_Type__c</errorDisplayField>
        <errorMessage>With a Primary Request &quot;Monogramming&quot; and a Baby &amp; Child Monogram Type, you must have a &quot;B&amp;C Monogram Script&quot; and &quot;B&amp;C Monogram Border.&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BODateCaseCannotincludeSPO</fullName>
        <active>true</active>
        <description>BO Date Validation cases cannot be submitted for SPO lines</description>
        <errorConditionFormula>( 
RecordType.Name = &quot;BO Date Validation&quot; &amp;&amp;
Line_Number__r.Drop_Ship__c = true
)</errorConditionFormula>
        <errorMessage>BO Date Validation cases cannot be submitted for SPO lines</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_submit_case_for_lines_not_backorder</fullName>
        <active>true</active>
        <errorConditionFormula>( 
RecordType.Name = &quot;BO Date Validation&quot; &amp;&amp; 
(ISBLANK(Line_Number__r.Backorder_Quantity__c) || Line_Number__r.Backorder_Quantity__c &lt;= 0))</errorConditionFormula>
        <errorMessage>BO Date Validation Cases can only be created with lines currently on backorder.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DRSChangeOrderNumber</fullName>
        <active>true</active>
        <description>Order Number can only be changed when the original value was blank</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &quot;Delivery_Return_Support&quot;, 
ISCHANGED(Order__c ), 
NOT(ISBLANK(PRIORVALUE(Order__c))), 
$Profile.Name &lt;&gt; &quot;API Only&quot;, 
$Profile.Name &lt;&gt; &quot;Business Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;System Administrator&quot; 
)</errorConditionFormula>
        <errorDisplayField>Order__c</errorDisplayField>
        <errorMessage>Do not change order number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FlatRateORAdjustedPriceQty</fullName>
        <active>false</active>
        <description>A user cannot key both a flat rate and either an adjusted unit price or an accommodation quantity.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Flat_Rate_Line_Accommodation_Amount__c)),
OR(
NOT(ISBLANK(Adjusted_Unit_Price__c)),
NOT(ISBLANK(Accommodation_Quantity__c))
)
)</errorConditionFormula>
        <errorDisplayField>Flat_Rate_Line_Accommodation_Amount__c</errorDisplayField>
        <errorMessage>You can either have a Flat Rate Line Accommodation Amount or a New Price/Accommodation Quantity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Line_Item_Acc_Must_Have_Acc_Reason</fullName>
        <active>false</active>
        <errorConditionFormula>AND( RecordType.DeveloperName=&quot;Accommodations&quot;, Line_Item_Accommodation_Amount__c &gt; 0,  ISBLANK(TEXT(Accommodation_Reason__c )))</errorConditionFormula>
        <errorDisplayField>Accommodation_Reason__c</errorDisplayField>
        <errorMessage>You must have an Accommodation Reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interim_Update_Must_Be_Filled_In</fullName>
        <active>true</active>
        <description>When a user with the role &quot;CSC DC/HDL Advocate&quot; sets Status = Transfer and To = DC, Interim Update cannot = BLANK</description>
        <errorConditionFormula>AND( 
NOT(RecordType.Name=&quot;Replacement Parts&quot;),
NOT(RecordType.Name=&quot;Order Inquiries - Modify Gift Box&quot;),
NOT(RecordType.Name=&quot;Order Inquiries - Modify Monogramming&quot;),
NOT(RecordType.Name=&quot;Order Inquiries&quot;),
ISPICKVAL( Case_Number__r.Status,&quot;Transfer&quot;), 
ISPICKVAL( Case_Number__r.To__c ,&quot;DC&quot;), 
ISBLANK(TEXT(Interim_Update__c )) 
)</errorConditionFormula>
        <errorMessage>Please select an Interim Update before transferring the case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Case_Line_Items</fullName>
        <active>true</active>
        <errorConditionFormula>Case_Number__r.Is_Locked__c</errorConditionFormula>
        <errorMessage>Record cannot be &quot;Edited &quot; as the Case is Locked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_Other_Notes_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name = &quot;Accommodations&quot;,
ISPICKVAL(Accommodation_Reason__c, &quot;Other - Specify&quot;) , ISBLANK( Other_Notes__c ) )</errorConditionFormula>
        <errorDisplayField>Other_Notes__c</errorDisplayField>
        <errorMessage>You must have &quot;Other Notes&quot; with a selection of Other.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NewPriceLessThanUnitPrice</fullName>
        <active>true</active>
        <description>The new price must be less than or equal to the unit price.</description>
        <errorConditionFormula>AND( 
RecordType.Name = &quot;Accommodations&quot;, 
Adjusted_Unit_Price__c &gt;= Unit_Price__c)</errorConditionFormula>
        <errorDisplayField>Adjusted_Unit_Price__c</errorDisplayField>
        <errorMessage>The New Price must be less than the Unit Price.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoCWSKUIDChange</fullName>
        <active>true</active>
        <description>If a line number is populated, do not allow the CW SKU ID to be changed on the case line.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Line_Number__c)),
NOT(PRIORVALUE(CW_SKU_ID__c)=&quot;&quot;),
ISCHANGED(CW_SKU_ID__c)
)</errorConditionFormula>
        <errorDisplayField>CW_SKU_ID__c</errorDisplayField>
        <errorMessage>You cannot change the CW SKU ID if it is associated with a line number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Charge_Replacement</fullName>
        <active>true</active>
        <description>No Charge Replacement can only be set if this is an exchange.</description>
        <errorConditionFormula>AND (
  No_Charge_Replacement__c,
  NOT(Exchange__c)
)</errorConditionFormula>
        <errorDisplayField>No_Charge_Replacement__c</errorDisplayField>
        <errorMessage>No Charge Replacement can only be checked if Exchange is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Notes_when_Other_Specify</fullName>
        <active>true</active>
        <description>Only fill in field &apos;Other Notes&apos; when accommodation reason = Other Specify</description>
        <errorConditionFormula>AND( 
RecordType.Name = &quot;Accommodations&quot;, 
NOT(ISPICKVAL(Accommodation_Reason__c,&quot;Other - Specify&quot;)), 
NOT(ISBLANK(Other_Notes__c)) 
)</errorConditionFormula>
        <errorDisplayField>Other_Notes__c</errorDisplayField>
        <errorMessage>Please add any notes to the case comments once you have saved the case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PercentORAdjustedUnitPrice</fullName>
        <active>true</active>
        <description>Only allows the user to key EITHER the Original Requested Percent or the New Price, not both.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Original_Line_Requested_Percentage__c)),
NOT(ISBLANK(Adjusted_Unit_Price__c))
)</errorConditionFormula>
        <errorDisplayField>Original_Line_Requested_Percentage__c</errorDisplayField>
        <errorMessage>You cannot have an Original Line Requested Percentage and a New Price concurrently.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_Returned</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  RecordType.Name = &quot;Returns&quot;,
  NOT(ISBLANK(Line_Number__c)),
  OR(
    ISBLANK(Quantity_Returned__c),
    Quantity_Returned__c &lt;= 0,
    AND(
      NOT(ISBLANK(Quantity_Returned__c)),
      ISBLANK(Line_Number__r.Shipped_Quantity__c)
    ),
    AND(
      NOT(ISBLANK(Quantity_Returned__c)),
      NOT(ISBLANK(Line_Number__r.Shipped_Quantity__c)),
      ISBLANK(Line_Number__r.Return_Quantity__c),
      Quantity_Returned__c &gt; Line_Number__r.Shipped_Quantity__c
    ),
    AND(
      NOT(ISBLANK(Quantity_Returned__c)),
      NOT(ISBLANK(Line_Number__r.Shipped_Quantity__c)),
      NOT(ISBLANK(Line_Number__r.Return_Quantity__c)),
      Quantity_Returned__c &gt; (Line_Number__r.Shipped_Quantity__c - Line_Number__r.Return_Quantity__c)
    )
  )
)</errorConditionFormula>
        <errorDisplayField>Quantity_Returned__c</errorDisplayField>
        <errorMessage>Quantity Returned must be greater than zero and cannot be greater than Shipped Quantity - Previously Returned.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ROBEInspection_Details</fullName>
        <active>true</active>
        <description>You must have entered inspection details if you are a Backend user.</description>
        <errorConditionFormula>AND(
RecordType.Name = &quot;Reorders&quot;,
$Profile.Name = &quot;CSC Backend Associate&quot;,
ISBLANK(Inspection_Details__c),
NOT(ISNEW()) 
)</errorConditionFormula>
        <errorDisplayField>Inspection_Details__c</errorDisplayField>
        <errorMessage>You must enter Inspection Details before sending the case to the DC.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RODCUnapprovedReason</fullName>
        <active>true</active>
        <description>You must have an unapproved reason if the Interim Update is Unapproved and you are the DC.</description>
        <errorConditionFormula>AND(
RecordType.Name = &quot;Reorders&quot;,
$Profile.Name = &quot;DC&quot;,
ISPICKVAL(Interim_Update__c, &quot;Unapproved&quot;),
ISBLANK(TEXT(Unapproved_Reason__c)))</errorConditionFormula>
        <errorDisplayField>Unapproved_Reason__c</errorDisplayField>
        <errorMessage>You must select an Unapproved Reason when your Interim Update is Unapproved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ROUnapprovedReason</fullName>
        <active>false</active>
        <description>User can only fill out Unapproved Reason if the Interim Update is unapproved.</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(Interim_Update__c, &quot;Unapproved&quot;)),
NOT(ISBLANK(TEXT(Unapproved_Reason__c)))
)</errorConditionFormula>
        <errorDisplayField>Unapproved_Reason__c</errorDisplayField>
        <errorMessage>You cannot have an Unapproved Reason unless your Interim Update is Unapproved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Accommodations_Field</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 RecordType.Name = &quot;Accommodations&quot;,
 OR(
  AND(
   NOT(ISBLANK(Original_Line_Requested_Percentage__c)),
   NOT(ISBLANK(Flat_Rate_Line_Accommodation_Amount__c))
  ),
  AND(
   NOT(ISPICKVAL(Status__c,&quot;New&quot;)),
   ISBLANK(Original_Line_Requested_Percentage__c),
   ISBLANK(Flat_Rate_Line_Accommodation_Amount__c)
  )
 )
)</errorConditionFormula>
        <errorMessage>Please fill in either Original Line Requested Percentage or Flat Rate Line Accommodation Amount, but not both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Return_Reason_Description</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  RecordType.Name = &quot;Returns&quot;,
  ISBLANK(Return_Reason_Description__c),  
  OR(  
    ISPICKVAL(Return_Reason__c , &quot;Defective&quot;),
    ISPICKVAL(Return_Reason__c , &quot;Defective - MOS&quot;),
    ISPICKVAL(Return_Reason__c , &quot;Damaged&quot;),
    ISPICKVAL(Return_Reason__c , &quot;Damaged - MOS&quot;),
    ISPICKVAL(Return_Reason__c , &quot;Client Pref - No Qlty Issue&quot;)
  ) 
)</errorConditionFormula>
        <errorDisplayField>Return_Reason_Description__c</errorDisplayField>
        <errorMessage>Please describe the reason for the return and any damage to the item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPOCaseLineRequired</fullName>
        <active>false</active>
        <errorConditionFormula>( 
RecordType.Name = &quot;SPO Date Validation&quot; &amp;&amp; 
(ISBLANK(Line_Number__r.Backorder_Quantity__c) || Line_Number__r.Backorder_Quantity__c &lt;= 0))</errorConditionFormula>
        <errorMessage>SPO Date Validation Case&apos;s can only include SPO Line items</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPOCaseLineValidation</fullName>
        <active>true</active>
        <errorConditionFormula>( 
RecordType.Name = &quot;SPO Date Validation&quot; &amp;&amp;
Line_Number__r.Drop_Ship__c = false
)</errorConditionFormula>
        <errorMessage>SPO Date Validation cases can only be submitted for SPO lines</errorMessage>
    </validationRules>
</CustomObject>